# llama-kernel

./: .gitignore  README.md  main.py  pyproject.toml  requirements-server.txt  requirements.txt  server.py
llama_kernel/: __init__.py  model.py  pytorch_kernels.py  utils.py
